// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddNoteComposition /> should render the page 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Styled(styled.div)>
      <Styled(styled.div)>
        <withRouter(Connect(PropertyInformationComposition)) />
      </Styled(styled.div)>
      <styled.div>
        <styled.p>
          warning
           
          <Styled(WithTheme(Button))
            data-bdd="AddInteraction-link"
            isText={true}
            to="/arrears-details/foo/interaction/create"
          >
            addInteraction
          </Styled(WithTheme(Button))>
        </styled.p>
        <AddNoteForm
          additionalFields={
            <Checkbox
              checked={false}
              data-bdd="addNoteForm-attachFiles"
              data-state-key="attachFiles"
              display="inline-block"
              error={false}
              hasError={false}
              onChange={[Function]}
              required={false}
            >
              attachFile
            </Checkbox>
          }
          cancelText="back"
          fileAttachmentLabel="attachFile"
          hasFileAttachment={false}
          noteError="noteError"
          noteLabel="note"
          onCancel={[Function]}
          onSubmit={[Function]}
          submitText="addNote"
        />
      </styled.div>
    </Styled(styled.div)>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<AddNoteComposition /> should render the page correctly when there is an error 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Styled(styled.div)>
      <Styled(styled.div)>
        <withRouter(Connect(PropertyInformationComposition)) />
      </Styled(styled.div)>
      <styled.div>
        <styled.p>
          warning
           
          <Styled(WithTheme(Button))
            data-bdd="AddInteraction-link"
            isText={true}
            to="/arrears-details/foo/interaction/create"
          >
            addInteraction
          </Styled(WithTheme(Button))>
        </styled.p>
        <styled.div
          data-bdd="AddNote-error"
        >
          <NotificationPanel
            description="formError"
            hideCloseButton={true}
            icon="warning"
            onCloseNotification={[Function]}
            show={true}
          />
        </styled.div>
        <AddNoteForm
          additionalFields={
            <Checkbox
              checked={false}
              data-bdd="addNoteForm-attachFiles"
              data-state-key="attachFiles"
              display="inline-block"
              error={false}
              hasError={false}
              onChange={[Function]}
              required={false}
            >
              attachFile
            </Checkbox>
          }
          cancelText="back"
          fileAttachmentLabel="attachFile"
          hasFileAttachment={false}
          noteError="noteError"
          noteLabel="note"
          onCancel={[Function]}
          onSubmit={[Function]}
          submitText="addNote"
        />
      </styled.div>
    </Styled(styled.div)>
  </div>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<AddNoteComposition /> should render the page correctly when there is loading 1`] = `
<Loader
  theme={
    Object {
      "colors": Object {
        "tertiaryLighter": "#D9D4D4",
      },
    }
  }
/>
`;
